--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Implantação Linx</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Carregar Arquivo Excel</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
     <style>
         table {
@@ -22,7 +22,10 @@
 </head>
 <body>
 
-    <h2>Carregar Arquivo Excel - Implantação LINX</h2>
+    <h2>Carregar Arquivo Excel</h2>
+
+    <!-- Botão de Download -->
+    <button id="download-btn" style="margin-top: 20px;">Baixar Planilha Ajustada</button><br><br>
     
     <!-- Formulário para upload do arquivo -->
     <input type="file" id="file-input" accept=".xlsx, .xls" />
@@ -100,6 +103,42 @@
                 
                 reader.readAsArrayBuffer(file);
             }
+        });
+
+        // Função para baixar o arquivo Excel ajustado
+        document.getElementById('download-btn').addEventListener('click', function() {
+            // Captura a tabela de dados já ajustados
+            const table = document.getElementById('excel-table');
+            const rows = table.getElementsByTagName('tr');
+            const jsonData = [];
+
+            // Captura os dados da tabela HTML, incluindo o cabeçalho
+            for (let i = 0; i < rows.length; i++) {
+                const cells = rows[i].getElementsByTagName('td');
+                const row = [];
+                for (let j = 0; j < cells.length; j++) {
+                    row.push(cells[j].textContent);
+                }
+                // Se for o cabeçalho, capturamos as células com <th>
+                if (cells.length === 0) {
+                    const headerCells = rows[i].getElementsByTagName('th');
+                    const headerRow = [];
+                    for (let j = 0; j < headerCells.length; j++) {
+                        headerRow.push(headerCells[j].textContent);
+                    }
+                    jsonData.push(headerRow);
+                } else {
+                    jsonData.push(row);
+                }
+            }
+
+            // Converte o array de dados para uma planilha Excel
+            const ws = XLSX.utils.aoa_to_sheet(jsonData);
+            const wb = XLSX.utils.book_new();
+            XLSX.utils.book_append_sheet(wb, ws, "Planilha Ajustada");
+
+            // Gera e faz o download do arquivo Excel
+            XLSX.writeFile(wb, "planilha_ajustada.xlsx");
         });
     </script>
 
